tests/negative/undefined_vars/use_before_declare.nano
# Expected error: Undefined variable
# Variable used before declaration

fn test() -> int {
    let y: int = x
    let x: int = 42
    return y
}

shadow test {
    assert (== (test) 42)
}

fn main() -> int {
    return 0
}

shadow main {
    assert (== (main) 0)
}

